--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://postgres.yuithqxmfxpxgorawcvn:[umami-lijiawei]@aws-0-ap-northeast-1.pooler.supabase.com:5432/postgres
+DATABASE_URL=postgres://postgres.yuithqxmfxpxgorawcvn:[umami-lijiawei123]@aws-0-ap-northeast-1.pooler.supabase.com:5432/postgres
