--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL=postgres://postgres.yuithqxmfxpxgorawcvn:[umami-lijiawei123]@aws-0-ap-northeast-1.pooler.supabase.com:5432/postgres
+DATABASE_URL=postgresql://umami:lijiawei123@localhost:5432/database_name
+JWT_SECRET=your_secret_key_here
